--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -2,8 +2,9 @@ github_users:
   - jongharyu
 
 github_repos:
+  - jongharyu/neural-svd
+  - jongharyu/confidence-sequence-via-gambling
   - jongharyu/wyner-model
   - jongharyu/split-knn-rules
-  - jongharyu/knn-functional-estimation 
+  - jongharyu/knn-functional-estimation
   - jongharyu/olo-with-side-information
-  - jongharyu/confidence-sequence-via-gambling
