--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,69 +1,69 @@
-"Bhatt":
+"bhatt":
   - firstname: ["Alankrita"]
     url: https://alankritabhatt.github.io/
 
-"Bu":
+"bu":
   - firstname: ["Yuheng"]
     url: https://buyuheng.github.io/
 
-"Choi":
+"choi":
   - firstname: ["Yoojin"]
     url: https://scholar.google.com/citations?user=haggDAwAAAAJ&hl=en
 
-"Cohen":
+"cohen":
   - firstname: ["Taco S."]
     url: https://tacocohen.wordpress.com/
 
-"El-Khamy":
+"el-khamy":
   - firstname: ["Mostafa"]
     url: https://scholar.google.com/citations?user=qxPC268AAAAJ&hl=en
 
-"Ganguly":
+"ganguly":
   - firstname: ["Shouvik"]
     url: https://acsweb.ucsd.edu/~shgangul/
 
-"Huang":
+"huang":
   - firstname: ["Jiun-Ting"]
     url: https://scholar.google.com/citations?user=nRIpwSwAAAAJ&hl=en
 
-"Kim":
+"kim":
   - firstname: ["Young-Han", "Y.-H."]
     url: https://web.eng.ucsd.edu/~yhk/
 
-"Lee":
+"lee":
   - firstname: ["Daniel D."]
     url: https://www.ece.cornell.edu/faculty-directory/daniel-dongyuel-lee
   - firstname: ["Jungwon"]
     url: https://scholar.google.com/citations?user=Cya7Va8AAAAJ&hl=en
 
-"Noh":
+"noh":
   - firstname: ["Yung-Kyun"]
     url: http://aais.hanyang.ac.kr/nohyung/
 
-"Sautière":
+"sautière":
   - firstname: ["Guillaume"]
     url: https://naifrec.github.io/
 
-"Shah":
+"shah":
   - firstname: ["Abhin"]
     url: https://abhin-shah.github.io/
 
-"Shen":
+"shen":
   - firstname: ["Maohao"]
     url: https://maohaos2.github.io/Maohao/
 
-"Wornell":
+"wornell":
   - firstname: ["Gregory W."]
     url: http://allegro.mit.edu/~gww/
 
-"Xu":
+"xu":
   - firstname: ["Xiangxiang"]
     url: https://xiangxiangxu.mit.edu/
 
-"Yang":
+"yang":
   - firstname: ["Yang"]
     url: https://yyang768osu.github.io/
 
-"Zheng":
+"zheng":
   - firstname: ["Lizhong"]
     url: https://lizhongzheng.mit.edu/
