--- a/_config.yml
+++ b/_config.yml
@@ -274,7 +274,7 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["formatting", "images", "links", "math", "code"] # these tags will be displayed on the front page of your blog
+display_tags: [] # these tags will be displayed on the front page of your blog
 display_categories: ["blockquotes"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
@@ -297,7 +297,7 @@ scholar:
     article: journal articles,
     inproceedings: conference papers,
     report: miscellaneous,
-    phdthesis: theses,
+    phdthesis: PhD thesis,
   }
 
   source: /_bibliography/
