--- a/_config.yml
+++ b/_config.yml
@@ -303,7 +303,7 @@ scholar:
 
   sort_by: date # year
   order: descending
-  type_order: [misc, unpublished, book, article, inbook, proceedings, inproceedings, incollections, report, phdthesis]
+  type_order: [unpublished, misc, book, article, inbook, proceedings, inproceedings, incollections, report, phdthesis]
   type_names:
     {
       unpublished: Working papers,
