--- a/_config.yml
+++ b/_config.yml
@@ -210,7 +210,9 @@ kramdown:
       start_line: 1
 
 # Includes & excludes
-include: ["_pages"]
+include: 
+  - _pages
+  - _bibliography/papers.bib
 exclude:
   - bin/
   - CONTRIBUTING.md
