Add ICML 2025 posters; add coauthors

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -30,6 +30,10 @@
   - firstname: ["Tejas"]
     url: https://tejasjayashankar.github.io/
 
+"jeong":
+  - firstname: ["Minchan"]
+    url: https://www.linkedin.com/in/minchan-jeong-5303b7268/
+
 "jun":
   - firstname: ["Kwang-Sung"]
     url: https://kwangsungjun.github.io/
@@ -63,6 +67,10 @@
 "shen":
   - firstname: ["Maohao"]
     url: https://maohaos2.github.io/Maohao/
+
+"yun":
+  - firstname: ["Se-Young"]
+    url: https://fbsqkd.github.io/
 
 "wornell":
   - firstname: ["Gregory W."]
