--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -21,7 +21,7 @@ github_username: jongharyu # your GitHub user name
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-linkedin_username: jongha-jon-ryu-997ba7a7 # your LinkedIn user name
+linkedin_username: jongha-ryu-997ba7a7 # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
 # orcid_id: # your ORCID ID
