--- a/_config.yml
+++ b/_config.yml
@@ -147,6 +147,7 @@ collections:
     output: true
   projects:
     output: true
+    permalink: /research/:name/
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
