--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Off the Record  # your blog must have a name for it to show up in the nav bar
+blog_name:  # your blog must have a name for it to show up in the nav bar
 blog_description: Ideas, reflections, and things that didn't end up in a paper.
 permalink: /blog/:year/:month/:title/
 lsi: false # produce an index for related posts
